--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="#">Список заметок</a>
+    <a class="navbar-brand" href="#">Заметки</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -8,7 +8,8 @@
         <ul class="navbar-nav mr-auto">
             {% set items =
                 [
-                    ['notes', 'Заметки', path('notes_page')],
+                    ['notes', 'Список', path('notes_page')],
+                    ['add', 'Добавить', path('add_page')],
                     ['help', 'Помощь', path('help_page')],
                 ]
             %}
