--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -9,7 +9,7 @@
             {% set items =
                 [
                     ['notes', 'Список', path('notes_page')],
-                    ['add', 'Добавить', path('add_page')],
+                    ['note_add', 'Добавить', path('add_note_page')],
                     ['help', 'Помощь', path('help_page')],
                 ]
             %}
