--- a/templates/note/help.html.twig
+++ b/templates/note/help.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Список заметок{% endblock %}
+{% block title %}Помощь{% endblock %}
 
 {% block body %}
 
