--- a/templates/note/index.html.twig
+++ b/templates/note/index.html.twig
@@ -6,7 +6,7 @@
 
     {% include 'navbar.html.twig' with {'active': 'notes'} %}
 
-    <div class="col-xs-1 mt-2 ml-2 mr-2">
+    <div class="col-lg-3 col-lg-6 mx-auto mt-3 ml-4 mr-5">
         <div class="list-group">
             <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
                 <div class="d-flex w-100 justify-content-between">
