--- a/templates/note/add.html.twig
+++ b/templates/note/add.html.twig
@@ -17,7 +17,7 @@
                 <label for="note-text-input">Текст заметки</label>
                 <textarea name="note_text" class="form-control" id="note-text-input" rows="3"></textarea>
             </div>
-            <button class="btn btn-primary float-right" type="submit">Button</button>
+            <button class="btn btn-primary float-right" type="submit">Добавить</button>
         </form>
     </div>
 
